Refs #14807 !strict Added overflow:hidden to mblListItem and mblIconItem so that the focus frame is displayed correctly.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@27891 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/IconContainer.less
+++ b/mobile/themes/common/IconContainer.less
@@ -7,6 +7,7 @@
 /* dojox.mobile.IconItem */
 .mblIconItem {
 	position: relative;
+	overflow: hidden; /* for focus frame */
 	list-style-type: none;
 	float: left;
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
