--- a/mobile/themes/common/ListItem.less
+++ b/mobile/themes/common/ListItem.less
@@ -1,6 +1,7 @@
 /* dojox.mobile.ListItem */
 .mblListItem {
 	position: relative;
+	overflow: hidden; /* for focus frame */
 	padding: 0 8px;
 	height: @mbl-list-item-height;
 	list-style-type: none;
